@@ -12,6 +12,7 @@ class QPDF_Array: public QPDFObject
     QPDF_Array(std::vector<QPDFObjectHandle> const& items);
     virtual ~QPDF_Array();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
     virtual void setDescription(QPDF*, std::string const&);
