@@ -9,6 +9,7 @@ class QPDF_Bool: public QPDFObject
     QPDF_Bool(bool val);
     virtual ~QPDF_Bool();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
     bool getVal() const;
