@@ -14,6 +14,7 @@ class QPDF_Dictionary: public QPDFObject
     QPDF_Dictionary(std::map<std::string, QPDFObjectHandle> const& items);
     virtual ~QPDF_Dictionary();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
     virtual void setDescription(QPDF*, std::string const&);
