@@ -9,6 +9,7 @@ class QPDF_InlineImage: public QPDFObject
     QPDF_InlineImage(std::string const& val);
     virtual ~QPDF_InlineImage();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
     std::string getVal() const;
