@@ -9,6 +9,7 @@ class QPDF_Integer: public QPDFObject
     QPDF_Integer(long long val);
     virtual ~QPDF_Integer();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
     long long getVal() const;
