@@ -8,6 +8,7 @@ class QPDF_Null: public QPDFObject
   public:
     virtual ~QPDF_Null();
     virtual std::string unparse();
+    virtual JSON getJSON();
     virtual QPDFObject::object_type_e getTypeCode() const;
     virtual char const* getTypeName() const;
 };
